# django-sagragest

./: .env.example  .gitignore  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
accounts/: admin.py  models.py  views.py
accounts/templates/accounts/: login.html  logout.html  password_change.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  profile_edit.html  register.html
core/: urls.py  utils.py
core/settings/: dev.py  prod.py
core/settings/common/: apps.py  middleware.py  paths.py  templates.py
printers/: utils.py
sagragest/management/commands/: seed_sagragest.py
sagrarapid/: views.py
sagrarapid/templates/sagrarapid/: order_entry.html
script/: setup_sagragest
static/: output.css
templates/: base.html  footer.html  index.html  navbar.html
